# adventofcode-2023

./: .gitmodules  Cargo.toml  LICENSE.md  README.md  profile.json
.github/workflows/: ci.yaml
benches/: benchmark.rs
data/day6/: input2.txt
src/: _day.rs  day1.rs  day10.rs  day14.rs  day16.rs  day17.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs  util.rs
src/days/: day1.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day7.rs  day8.rs  day9.rs  mod.rs
tests/: cli_tests.rs  tests.rs
tests/cmd/: day1.stdout  day1.toml
