[package]
name = "adventofcode"
version = "0.1.0"
edition = "2021"

[dependencies.clap]
version = "4.4.10"
features = ["derive"]

[profile.profiling]
inherits = "release"
debug = true

[profile.samply]
inherits = "release"
debug = true

[dev-dependencies]
assert_cmd = "2.0.12"
criterion = "0.5.1"
trycmd = "0.14.19"

[[bench]]
name = "benchmark"
harness = false
