[package]
name = "adventofcode"
version = "0.1.0"
edition = "2021"
default-run = "adventofcode"

[[bin]]
name = "adventofcode"
path = "src/main.rs"

[dependencies]
nalgebra = { version = "0.32.3", features = ["sparse"] }

[dependencies.clap]
version = "4.4.10"
features = ["derive"]

[profile.samply]
inherits = "release"
debug = true

[dev-dependencies]
assert_cmd = "2.0.12"
criterion = "0.5.1"
trycmd = "0.14.19"

[[bench]]
name = "benchmark"
harness = false
